Implement variable substitution with expr.rb

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
-TESTS = cond.bash devmap.bash pinmap.bash
+TESTS = cond.bash devmap.bash pinmap.bash expr.bash
 
